minor issues: date and scrollbar on no tags

--- a/client/src/components/modules/dreams/DreamContainer.css
+++ b/client/src/components/modules/dreams/DreamContainer.css
@@ -173,7 +173,7 @@
 .noTags {
   position: absolute;
   top: 1.5vh;
-  width: 50vw;
+  width: 8vw;
   left: 1vw;
   color: white;
   font-weight: normal;
